FIX: Privacy Button Alignment

--- a/Assets/css/kanboard-support.css
+++ b/Assets/css/kanboard-support.css
@@ -471,3 +471,7 @@ margin-right: 8px;}
 .privacy-none {
     display: none;
 }
+
+section.privacy-warning p {
+    display: inline-block;
+}
